[tool.poetry]
name = "python-opengl"
version = "0.1.0"
description = ""
authors = ["Aditya Wardianto <adityawardianto.19073@mhs.its.ac.id>"]

[tool.poetry.dependencies]
python = "3.9.7"
numpy = "^1.21.3"
pyopengltk = "^0.0.3"
streamlit = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
icecream = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
